fixed index visibility

--- a/css/style.css
+++ b/css/style.css
@@ -2430,7 +2430,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .js .animate-box {
-  opacity: 0;
+  opacity: 100;
 }
 
 
